@@ -8,7 +8,8 @@ Exec=atril %U
 StartupNotify=true
 Terminal=false
 Type=Application
-Icon=acroread
+#Icon=acroread
+Icon=postscript-viewer
 X-MATE-DocPath=
 X-MATE-Bugzilla-Bugzilla=MATE
 X-MATE-Bugzilla-Product=atril
