@@ -5,7 +5,8 @@ Name[fr]=Espace Disque
 Comment=MATE Disk Usage Analyzer
 TryExec=mate-disk-usage-analyzer
 Exec=mate-disk-usage-analyzer
-Icon=baobab
+#Icon=baobab
+Icon=drive-harddisk
 Terminal=false
 Type=Application
 StartupNotify=true
