@@ -4,8 +4,7 @@ Name[de]=Webbrowser
 Name[fr]=Navigateur Internet
 Comment=Mozilla Firefox ESR
 Exec=firefox %u
-#Icon=firefox
-Icon=applications-internet
+Icon=firefox
 Type=Application
 Categories=Network;
 MimeType=text/html;text/xml;application/xhtml+xml;application/vnd.mozilla.xul+xml;text/mml;x-scheme-handler/http;x-scheme-handler/https;
