@@ -6,7 +6,7 @@ Name[fr]=Courrier électronique
 Comment=Mozilla Thunderbird ESR
 Exec=thunderbird
 #Icon=thunderbird
-Icon=internet-mail
+Icon=applications-mail
 Type=Application
 Categories=Application;Network;
 StartupNotify=true
