@@ -1,0 +1,12 @@
+                 |-----handy-ruler------------------------------------------------------|
+elementary-extras: elementary extras (icon theme)
+elementary-extras:
+elementary-extras: Extra icons for the awesome Elementary Icon Theme.
+elementary-extras: 
+elementary-extras: 
+elementary-extras: 
+elementary-extras: 
+elementary-extras:
+elementary-extras: 
+elementary-extras: 
+elementary-extras: Package created by Niki Kovacs <info@microlinux.fr>
