@@ -1,0 +1,12 @@
+                     |-----handy-ruler------------------------------------------------------|
+elementary-icon-theme: elementary icon theme (icon theme)
+elementary-icon-theme:
+elementary-icon-theme: The Elementary Icon Theme is designed to be smooth, sexy, clear and
+elementary-icon-theme: efficient.
+elementary-icon-theme: 
+elementary-icon-theme: 
+elementary-icon-theme: 
+elementary-icon-theme:
+elementary-icon-theme: 
+elementary-icon-theme: 
+elementary-icon-theme: Package created by Niki Kovacs <info@microlinux.fr>
